fixed position:fixed not working on mobile

--- a/assets/styles/components/_nav.scss
+++ b/assets/styles/components/_nav.scss
@@ -1,15 +1,21 @@
-.nav{
+#nav-container{
   position: fixed;
+  height: 100vh;
+  top: 2px;
+  bottom: 2px;
+  left:2px;
+  
+  z-index: 1;
+}
+.nav{
   text-decoration: none;
   display:flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   height: 90px;
-  width: 0;
-  z-index: 1;
-  top: 0;
-  left: 0;
+  width: 500px;
+  transform: translateY(-100px);
   background-color: transparent;
   overflow-x: hidden;
   transition: 0.5s ease;
@@ -17,21 +23,22 @@
     text-decoration: none;
     color: $white;
     font-size: 25px;
-    display: block;
     transition: 0.5s ease;
     font-weight: 600;
     letter-spacing: -0.045em;
   }
   #nav-exit{
-    margin-left: 20px
+    line-height: 0;
+    font-size: 50px;
+    padding-left: 20px;
   }
 }
 
 #open-button{
-  position: fixed;
-  z-index: 1;
+  position: absolute;
   top: 0;
   left: 0;
+  z-index: 1;
   font-size: 50px;
   cursor: pointer;
   background-color: transparent;
@@ -42,9 +49,11 @@
 }
 
 .sticky-trigger{
-  height: 10px;
-  width: 10px;
-  background-color: transparent;
+  height: 1px;
+  width: 1px;
   position: sticky;
+  
+  right: 0;
   top: 0;
+  background-color: blue;
 }
