--- a/assets/styles/core/_layout.scss
+++ b/assets/styles/core/_layout.scss
@@ -1,7 +1,9 @@
 html,
 body {
+  position: relative;
   margin: 0;
   padding: 0;
+  overflow:auto;
   background-color: $white;
   color: $black;
   font-family: $default-font-family;
