--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -76,8 +76,10 @@ p {
 }
 html,
 body {
+  position: relative;
   margin: 0;
   padding: 0;
+  overflow: auto;
   background-color: #f4f5f6;
   color: #454851;
   font-family: Infra, sans-serif;
@@ -137,18 +139,24 @@ main {
     font-size: 2rem;
   }
 }
-.nav {
+#nav-container {
   position: fixed;
+  height: 100vh;
+  top: 2px;
+  bottom: 2px;
+  left: 2px;
+  z-index: 1;
+}
+
+.nav {
   text-decoration: none;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   height: 90px;
-  width: 0;
-  z-index: 1;
-  top: 0;
-  left: 0;
+  width: 500px;
+  transform: translateY(-100px);
   background-color: transparent;
   overflow-x: hidden;
   transition: 0.5s ease;
@@ -157,20 +165,21 @@ main {
   text-decoration: none;
   color: #f4f5f6;
   font-size: 25px;
-  display: block;
   transition: 0.5s ease;
   font-weight: 600;
   letter-spacing: -0.045em;
 }
 .nav #nav-exit {
-  margin-left: 20px;
+  line-height: 0;
+  font-size: 50px;
+  padding-left: 20px;
 }
 
 #open-button {
-  position: fixed;
-  z-index: 1;
+  position: absolute;
   top: 0;
   left: 0;
+  z-index: 1;
   font-size: 50px;
   cursor: pointer;
   background-color: transparent;
@@ -181,12 +190,13 @@ main {
 }
 
 .sticky-trigger {
-  height: 10px;
-  width: 10px;
-  background-color: transparent;
+  height: 1px;
+  width: 1px;
   position: -webkit-sticky;
   position: sticky;
+  right: 0;
   top: 0;
+  background-color: blue;
 }
 
 .icon-and-label {
